# Python_web_06

./: .env  README.md  create_tables.py  create_tables.sql  docker-compose.yaml  main.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
